# Osorim

./: README.md
install/: local_setup.sh  setup.sh
install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_cbg_executor/include/examples_rclcpp_cbg_executor/: ping_node.hpp  pong_node.hpp
install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  action_client_not_composable  action_client_not_composable_with_cancel  action_client_not_composable_with_feedback
install/examples_rclcpp_minimal_action_client/share/examples_rclcpp_minimal_action_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_minimal_action_server/share/examples_rclcpp_minimal_action_server/: package.sh  (+5 more)
log/: latest_build  latest_list  latest_test
src/osorin/: package.xml  setup.cfg  setup.py
src/osorin/osorin/: osorin_firstNode.py
src/osorinCpp/: CMakeLists.txt
src/osorinCpp/include/osorinCpp/: cpp_header.hpp
src/osorinCpp/scripts/: py_node.py
src/osorinCpp/src/: cppNode.cpp
(+186 files in other folders)
